Initial project setup: Fix Java version and compilation errors
Co-authored-by: Jaoow <57773902+Jaoow@users.noreply.github.com>